--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.2-2) unstable; urgency=medium
+  [ Brian J. Murrell ]
+  * Version bump up to 1.2-rc2
+
+ -- Brian J. Murrell <brian.murrell@intel.com>  Thu, 29 Apr 2021 19:16:40 -0400
+
 daos (1.2-1) unstable; urgency=medium
   [ Brian J. Murrell ]
   * Version bump up to 1.2-rc1
