--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.0-16) unstable; urgency=medium
+  [ Brian J. Murrell ]
+  * Enable debuginfo package building on SUSE platforms
+
+ -- Brian J. Murrell <brian.murrell@intel.com>  Fri, 07 May 2021 13:37:45 -0400
+
 daos (1.3.0-15) unstable; urgency=medium
   [ Brian J. Murrell ]
   * Update to build on EL8
