--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.2.0-4) unstable; urgency=medium
+  [ Brian J. Murrell ]
+  * Enable debuginfo package building on SUSE platforms
+
+ -- Brian J. Murrell <brian.murrell@intel.com>  Mon, 17 May 2021 18:30:05 -0400
+
 daos (1.2.0-3) unstable; urgency=medium
   [ Brian J. Murrell ]
   * Package /etc/daos/certs in main/common package so that both server
