--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.102-3) unstable; urgency=medium
+  [ Li Wei ]
+  * Update raft to pick Pre-Vote
+
+ -- Li Wei <wei.g.li@intel.com>  Mon, 23 Jun 2021 14:46:00 +0800
+
 daos (1.3.102-1) unstable; urgency=medium
   [ Johann Lombardi]
   * Version bump to 1.3.102 for 2.0 test build 2
