DAOS-7457 ci: Run all tests on EL8
Now that the middleware and test tools have been ported to build on
EL8.

Skip-PR-comments: true

Add back R: libuuid-devel to daos-devel package as it's always necessary
when building with libdaos.

Skip-PR-comments: true
Quick-Functional: true
Test-tag: pr daily_regression
Skip-func-test-vm: true
Skip-func-test-leap15: true
Skip-func-test-el7: true
Skip-func-test-el8: true
Skip-func-hw-test: false
Func-hw-test-distro: centos8
Allow-unstable-test: true

Signed-off-by: Brian J. Murrell <brian.murrell@intel.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+daos (1.3.102-3) unstable; urgency=medium
+  [ Brian J. Murrell ]
+  * Add back R: libuuid-devel to daos-devel package as it's always
+    necessary when building with libdaos
+
+ -- Brian J. Murrell <brian.murrell@intel.com>  Mon, 21 Jun 2021 15:30:23 -0400
+
+daos (1.3.102-2) unstable; urgency=medium
+  [ Jeff Olivier]
+  * Update to pmdk 1.11.0-rc1
+  * Remove dependence on libpmem since we use libpmemobj directly
+
+ -- Jeff Olivier <jeffrey.v.olivier@intel.com>  Mon, 14 Jun 2021 00:00:00 -0000
+
 daos (1.3.102-1) unstable; urgency=medium
   [ Johann Lombardi]
   * Version bump to 1.3.102 for 2.0 test build 2
