--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.0-17) unstable; urgency=medium
+  [ Jeff Olivier]
+  * Remove client and server libs from common package
+
+ -- Jeff Olivier <jeffrey.v.olivier@intel.com>  Mon, 17 May 2021 11:17:30 -0100
+
 daos (1.3.0-16) unstable; urgency=medium
   [ Brian J. Murrell ]
   * Enable debuginfo package building on SUSE platforms
