--- a/doc/man/man8/dmg.8
+++ b/doc/man/man8/dmg.8
@@ -1,4 +1,4 @@
-.TH dmg 1 "12 April 2021"
+.TH dmg 1 "26 May 2021"
 .SH NAME
 dmg \- Administrative tool for managing DAOS clusters
 .SH SYNOPSIS
@@ -122,8 +122,8 @@ Access Control List file path for DAOS pool
 \fB\fB\-z\fR, \fB\-\-size\fR\fP
 Total size of DAOS pool (auto)
 .TP
-\fB\fB\-t\fR, \fB\-\-scm-ratio\fR <default: \fI"6"\fR>\fP
-Percentage of SCM:NVMe for pool storage (auto)
+\fB\fB\-t\fR, \fB\-\-tier-ratio\fR <default: \fI"6,94"\fR>\fP
+Percentage of storage tiers for pool storage (auto)
 .TP
 \fB\fB\-k\fR, \fB\-\-nranks\fR\fP
 Number of ranks to use (auto)
