--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.101-2) unstable; urgency=medium
+  [ Jeff Olivier]
+  * Remove client and server libs from common package
+
+ -- Jeff Olivier <jeffrey.v.olivier@intel.com>  Thu, 20 May 2021 11:17:30 -0100
+
 daos (1.3.101-1) unstable; urgency=medium
   [ Johann Lombardi ]
   * Version bump to 1.3.101 for 2.0 test build 1
