--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.101-3) unstable; urgency=medium
+  [ Johann Lombardi]
+  * Bump version to match the RPM's one
+
+ -- Johann Lombardi <johann.lombardi@intel.com>  Wed, 02 June 2021 08:00:30 -0100
+
 daos (1.3.101-2) unstable; urgency=medium
   [ Jeff Olivier]
   * Remove client and server libs from common package
