--- a/doc/man/man8/daos.8
+++ b/doc/man/man8/daos.8
@@ -1,295 +1,976 @@
-.\" (C) Copyright 2015-2021 Intel Corporation.
-.\"
-.\" SPDX-License-Identifier: BSD-2-Clause-Patent
-.\"
-.TH daos 8 2019-09-17 "0.0.1" "DAOS Utilities"
+.TH daos 1 "11 June 2021"
 .SH NAME
-daos \- command to manage DAOS pool/container/object
+daos \- Command to manage DAOS pool/container/object
 .SH SYNOPSIS
-.br
-.B daos RESOURCE COMMAND \fR[\fBOPTION\fRs]
+\fBdaos\fP RESOURCE COMMAND [OPTIONS]
 .SH DESCRIPTION
-.B daos
-can be used to manage/query pool content, create/query/manage/destroy a
-container inside a pool, copy data to/from a POSIX container to a POSIX
-filesystem, clone a DAOS container, or query/manage an object inside a
-container.
-.br
-The \fBRESOURCE\fRs, respective \fBCOMMAND\fRs and \fBOPTION\fRs supported by \fBdaos\fR are listed below.
-.SH RESOURCE\fRs/\fBCOMMAND\fRs/\fBOPTION\fRs
-.br
+daos is a tool that can be used to manage/query pool content,
+create/query/manage/destroy a container inside a pool, copy data
+between a POSIX container and a POSIX filesystem, clone a DAOS container,
+or query/manage an object inside a container.
+.SH OPTIONS
+.SS Application Options
 .TP
-.B RESOURCE\fRs:
-	  \fBpool\fR             pool
-.br
-	  \fBcontainer \fR(\fBcont\fR) container in a pool
-.br
-	  \fBfilesystem \fR(\fBfs\fR) POSIX filesystem path or POSIX container
-.br
-	  \fBobject \fR(\fBobj\fR)     object in a container
-.br
-	  \fBversion\fR          print command version
-.br
-	  \fBhelp\fR             print this message and exit
+\fB\fB\-\-debug\fR\fP
+enable debug output
 .TP
-.I help \fR[\fBRESOURCE \fR[\fBCOMMAND\fR]] \h'4' per-resource/command help
+\fB\fB\-\-verbose\fR\fP
+enable verbose output (when applicable)
 .TP
-.I pool \fBCOMMAND\fRs:
-	  \fBlist-containers\fR  list all containers in pool
-.br
-	  \fBlist-cont\fR
-.br
-	  \fBls\fR
-.br
-	  \fBquery\fR            query a pool
-.br
-	  \fBstat\fR             get pool statistics
-.br
-	  \fBlist-attrs\fR       list pool user-defined attributes
-.br
-	  \fBget-attr\fR         get pool user-defined attribute
-.br
-	  \fBset-attr\fR         set pool user-defined attribute
-.br
-	  \fBdel-attr\fR         del pool user-defined attribute
-.br
-	  \fBautotest\fR         verify setup with smoke tests
-.br
+\fB\fB\-\-json\fR\fP
+enable JSON output
+.SS Help Options
 .TP
-.I pool \fBOPTION\fRs:
-	  \fB--pool=\fRUUID        pool UUID
-.br
-	  \fB--sys-name=\fRSTR     DAOS system name context for servers ("daos_server")
-.br
-	  \fB--sys=\fRSTR
-.br
-	  \fB--attr=\fRNAME        pool attribute name to get, set, del
-.br
-	  \fB--value=\fRVALUESTR	pool attribute name to set
-.br
-.TP
-.I container \fR(\fIcont\fR) \fBCOMMAND\fRs:
-	  \fBcreate\fR           create a container
-.br
-	  \fBclone\fR            clone a container
-.br
-	  \fBdestroy\fR          destroy a container
-.br
-	  \fBlist-objects\fR     list all objects in container
-.br
-	  \fBlist-obj\fR
-.br
-	  \fBquery\fR            query a container
-.br
-	  \fBget-prop\fR         get all container's properties
-.br
-	  \fBset-prop\fR         set all container's properties
-.br
-	  \fBget-acl\fR         get a container's ACL
-.br
-	  \fBoverwrite-acl\fR         replace a container's ACL
-.br
-	  \fBupdate-acl\fR         add/modify entries in a container's ACL
-.br
-	  \fBdelete-acl\fR         delete an entry from a container's ACL
-.br
-	  \fBset-owner\fR         change the user and/or group that own a container
-.br
-	  \fBstat\fR             get container statistics
-.br
-	  \fBcheck\fR            check objects consistency in container
-.br
-	  \fBlist-attrs\fR       list container user-defined attributes
-.br
-	  \fBdel-attr\fR         delete container user-defined attribute
-.br
-	  \fBget-attr\fR         get container user-defined attribute
-.br
-	  \fBset-attr\fR         set container user-defined attribute
-.br
-	  \fBcreate-snap\fR      create container snapshot (optional name)
-.br
-				    at most recent committed epoch
-.br
-	  \fBlist-snaps\fR       list container snapshots taken
-.br
-	  \fBdestroy-snap\fR     destroy container snapshots
-.br
-				    by name, epoch or range
-.br
-	  \fBrollback\fR         roll back container to specified snapshot
-.TP
-.I container \fBOPTION\fRs (create by UUID):
-	  <\fIpool\fR options>   (\fB--pool\fR, \fB--sys-name\fR)
-.br
-	  \fB--cont=\fRUUID      (optional) container UUID (or generated)
-.TP
-.I container \fBOPTION\fRs (clone a container):
-	  \fB--src=\fRSTR	</pool/cont | path>
-.br
-	  \fB--dst=\fRSTR	</pool/cont | /pool | path>
-.TP
-.I container \fBOPTION\fRs (create and link to namespace path):
-	  <\fIpool\fR/\fIcont\fR opts>   (\fB--pool\fR, \fB--sys-name\fR, \fB--cont\fR [optional])
-.br
-	  \fB--path=\fRPATHSTR     container namespace path to be created and provide a direct link to new DAOS container
-.br
-	  \fB--type=\fRCTYPESTR    container type (HDF5, POSIX)
-.br
-	  \fB--oclass=\fROCLSSTR   container object class
-.br
-				      (ex: S{1,2,4,X}, RP_2G{1,2,4,X}, RP_3G{1,2,4,X}, RP_4G{1,2,4,X}, RP_XSF)
-.br
-	  \fB--chunk-size=\fRBYTES chunk size of files created. Supports suffixes:
-.br
-				      K (KB), M (MB), G (GB), T (TB), P (PB), E (EB)
-.br
-	  \fB--properties=\fR<name>:<value>[,<name>:<value>,...]      (optional) container properties
-.br
-				      Supported properties names:
-.br
-				      \fBlabel\fR (can be any string)
-.br
-				      \fBcksum\fR checksum type (can be {off,crc{16,32,64},adler32,sha{1,256,512})
-.br
-				      \fBcksum_size\fR checksum chunk size (can be any value <2GiB)
-.br
-				      \fBsrv_cksum\fR checksum server verify (can be {on,off})
-.br
-				      \fBdedup\fR deduplication type (can be {off,memcmp,hash}). Preview feature.
-.br
-				      \fBdedup_th\fR deduplication threshold (can be any value between 4KiB and 2GiB). Preview feature.
-.br
-				      \fBcompression\fR compression type (can be {lz4,deflate,deflate[1-4]}). Preview feature.
-.br
-				      \fBencryption\fR encryption type (can be aes-{xts{129,256},cbc{128,192,256},gcm{128,256}). Preview feature.
-.br
-				      \fBrf\fR redundancy factor (can be {0,1,2,3,4})
-.br
-	  \fB--acl-file=\fRPATH    input file containing ACL
-.br
-	  \fB--user=\fRID		 user who will own the container.
-.br
-					 format: username@[domain]
-.br
-					 default is the effective user
-.br
-	  \fB--group=\fRID		 group who will own the container.
-.br
-					 format: groupname@[domain]
-.br
-					 default is the effective group
-.TP
-.I container \fBOPTION\fRs (destroy):
-	  \fB--force\fR            destroy container regardless of state
-.TP
-.I container \fBOPTION\fRs (query, and all commands except create):
-	  <\fIpool\fR options>   with \fB--cont\fR use: (\fB--pool\fR, \fB--sys-name\fR)
-.br
-	  <\fIpool\fR options>   with \fB--path\fR use: (\fB--sys-name\fR)
-.br
-	  \fB--cont=\fRUUID        (mandatory, unless using \fB--path\fR)
-.br
-	  \fB--path=\fRPATHSTR     (mandatory, unless using \fB--cont\fR)
-.br
-                        namespace path must provide direct link to DAOS container
-.TP
-.I container \fBOPTION\fRs (set-prop):
-	  \fB--properties=\fRNAME:<value>[,<name>:<value>,...]
-						supported prop names: label
-                           label value can be any string
-.br
-.I container \fBOPTION\fRs (acl related):
-.br
-	  \fB--acl-file=\fRPATH        input file containing ACL (overwrite-acl,update-acl))
-.br
-	  \fB--entry=\fRACE     add or modify a single ACL entry (update-acl)
-.br
-	  \fB--principal=\fRID     principal of entry (delete-acl)
-                           for users: u:name@[domain]
-                           for groups: g:name@[domain]
-                           special principals: OWNER@, GROUP@, EVERYONE@
-.br
-	  \fB--verbose\fR     verbose mode (get-acl)
-.br
-	  \fB--outfile=\fRPATH     write ACL to file (get-acl)
-.br
-.TP
-.I container \fBOPTION\fR (set owner):
-.br
-	  \fB--user=\fRID        user who will own the container.
-                           format: username@[domain]
-.br
-	  \fB--group=\fRID     group who will own the container.
-                           format: groupname@[domain]
-.br
-.TP
-.I container \fBOPTION\fRs (attribute-related):
-	  \fB--attr=\fRNAME        container attribute name to set, get, del
-.br
-	  \fB--value=\fRVALUESTR   container attribute value to set
-.TP
-.I container \fBOPTION\fRs (snapshot and rollback-related):
-	  \fB--snap=\fRNAME        container snapshot (create/destroy-snap, rollback)
-.br
-	  \fB--epc=\fREPOCHNUM     container epoch (destroy-snap, rollback)
-.br
-	  \fB--epcrange=\fRB-E     container epoch range (destroy-snap)
-.TP
-.I filesystem \fR(\fIfs\fR) \fBCOMMAND\fRs:
-	  \fBcopy\fR           	 copy data to/from a container to POSIX path
-.br
-	  \fBset-attr\fR     	 set attributes (object class or chunk size) of a (new) file or (existing directory)
-.br
-	  \fBget-attr\fR     	 retrieve attributes of a file or directory
-.br
-	  \fBreset-attr\fR     	 reset attributes to default of a directory
-.br
-	  \fBreset-chunk-size\fR reset chunk size to default of a directory
-.br
-	  \fBreset-oclass\fR   	 reset object class to default of a directory
-.TP
-.I filesystem \fR(\fIfs\fR) \fBOPTION\fRs:
-.br
-	  \fB--path=\fRPATHSTR        path of file or directory to access, including the UNS link to the DFS container
-.br
-	  \fB--chunk-size=\fRBYTES    chunk size of file or directory.
-.br
-	  \fB--oclass=\fROCLSSTR      container object class
-.br
-				      (ex: S{1,2,4,X}, RP_2G{1,2,4,X}, RP_3G{1,2,4,X}, RP_4G{1,2,4,X}, RP_XSF)
-.br
-	  \fB--dfs-path=\fRSTR        <path> used with \fB--cont\fR) and \fB--pool\fR) option to specify the path of the file or directory in the DFS container
-.br
-	  \fB--dfs-prefix=\fRSTR      <path> a prefix to be trimmed from the absolute path when looking up the dfs-path in the container
-.br
-	  \fB--src=\fRSTR             src=daos://<pool/cont>[/<path>] | <path>
-.br
-	  \fB--dst=\fRSTR             dst=daos://<pool/cont>[/<path>] | <path>
-.br
-		type is daos, only specified if pool/cont used
-.TP
-.I object \fR(\fIobj\fR) \fBCOMMAND\fRs:
-	  \fBquery\fR            query an object's layout
-.br
-	  \fBlist-keys\fR        list an object's keys
-.br
-	  \fBdump\fR             dump an object's contents
-.TP
-.I object \fR(\fIobj\fR) \fBOPTION\fRs:
-	  <\fIpool\fR options>   (\fB--pool\fR, \fB--sys-name\fR)
-.br
-	  <\fIcont\fR options>   (\fB--cont\fR)
-.br
-	  \fB--oid=\fRHI.LO        object ID
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SH COMMANDS
+.SS container
+perform tasks related to DAOS containers
 
-.SH COLOPHON
-This page is part of the Distributed Asynchronous Object Storage (DAOS)
-exascale storage project.
-.br
-The project git reposity
-can be found at:
-\%https://github.com/daos-stack/daos.git .
-.br
-Bugs can be reported at:
-\%https://jira.hpdd.intel.com/projects/DAOS/.
+\fBAliases\fP: cont
+
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container check
+check objects' consistency in a container
+
+\fBUsage\fP: container check [check-OPTIONS]
+.TP
+.SS check objects' consistency in a container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-epc\fR\fP
+container epoch
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container clone
+clone a container
+
+\fBUsage\fP: container clone [clone-OPTIONS]
+.TP
+.SS clone a container
+.TP
+\fB\fB\-S\fR, \fB\-\-src\fR (\fIrequired\fR)\fP
+source container
+.TP
+\fB\fB\-D\fR, \fB\-\-dst\fR (\fIrequired\fR)\fP
+destination container
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container create
+create a container
+
+\fBUsage\fP: container create [create-OPTIONS]
+.TP
+.SS create a container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (optional)
+.TP
+\fB\fB\-t\fR, \fB\-\-type\fR <default: \fI"POSIX"\fR>\fP
+container type
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+container namespace path
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.TP
+\fB\fB\-\-properties\fR\fP
+container properties
+.TP
+\fB\fB\-A\fR, \fB\-\-acl-file\fR\fP
+input file containing ACL
+.TP
+\fB\fB\-u\fR, \fB\-\-user\fR\fP
+user who will own the container (username@[domain])
+.TP
+\fB\fB\-g\fR, \fB\-\-group\fR\fP
+group who will own the container (group@[domain])
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container create-snapshot
+create container snapshot
+
+\fBUsage\fP: container create-snapshot [create-snapshot-OPTIONS]
+.TP
+
+\fBAliases\fP: create-snap
+
+.SS create container snapshot
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-epc\fR\fP
+epoch to use for snapshot
+.TP
+\fB\fB\-s\fR, \fB\-\-snap\fR\fP
+snapshot name
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container delete-acl
+delete a container's ACL
+
+\fBUsage\fP: container delete-acl [delete-acl-OPTIONS]
+.TP
+.SS delete a container's ACL
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-P\fR, \fB\-\-principal\fR (\fIrequired\fR)\fP
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container delete-attribute
+delete container user-defined attribute
+
+\fBUsage\fP: container delete-attribute [delete-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: del-attr
+
+.SS delete container user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container destroy
+destroy a container
+
+\fBUsage\fP: container destroy [destroy-OPTIONS]
+.TP
+.SS destroy a container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-f\fR, \fB\-\-force\fR\fP
+force the container destroy
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container destroy-snapshot
+destroy container snapshot
+
+\fBUsage\fP: container destroy-snapshot [destroy-snapshot-OPTIONS]
+.TP
+
+\fBAliases\fP: destroy-snap
+
+.SS destroy container snapshot
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-epc\fR\fP
+snapshot epoch to delete
+.TP
+\fB\fB\-r\fR, \fB\-\-epcrange\fR\fP
+range of snapshot epochs to delete
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container get-acl
+get a container's ACL
+
+\fBUsage\fP: container get-acl [get-acl-OPTIONS]
+.TP
+.SS get a container's ACL
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-O\fR, \fB\-\-outfile\fR\fP
+write ACL to file
+.TP
+\fB\fB\-f\fR, \fB\-\-force\fR\fP
+overwrite existing outfile
+.TP
+\fB\fB\-V\fR, \fB\-\-verbose\fR\fP
+show verbose output
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container get-attribute
+get container user-defined attribute
+
+\fBUsage\fP: container get-attribute [get-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: get-attr
+
+.SS get container user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container get-property
+get container user-defined attribute
+
+\fBUsage\fP: container get-property [get-property-OPTIONS]
+.TP
+
+\fBAliases\fP: get-prop
+
+.SS get container user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-\-properties\fR <default: \fI"all"\fR>\fP
+container properties to get
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container list-attributes
+list container user-defined attributes
+
+\fBUsage\fP: container list-attributes [list-attributes-OPTIONS]
+.TP
+
+\fBAliases\fP: list-attrs
+
+.SS list container user-defined attributes
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-V\fR, \fB\-\-verbose\fR\fP
+Include values
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container list-objects
+list all objects in container
+
+\fBUsage\fP: container list-objects [list-objects-OPTIONS]
+.TP
+
+\fBAliases\fP: list-obj
+
+.SS list all objects in container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-epc\fR\fP
+container epoch
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container list-snapshots
+list container snapshots
+
+\fBUsage\fP: container list-snapshots [list-snapshots-OPTIONS]
+.TP
+
+\fBAliases\fP: list-snaps
+
+.SS list container snapshots
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container overwrite-acl
+replace a container's ACL
+
+\fBUsage\fP: container overwrite-acl [overwrite-acl-OPTIONS]
+.TP
+
+\fBAliases\fP: replace
+
+.SS replace a container's ACL
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-f\fR, \fB\-\-acl-file\fR (\fIrequired\fR)\fP
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container query
+query a container
+
+\fBUsage\fP: container query [query-OPTIONS]
+.TP
+.SS query a container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container rollback
+roll back container to specified snapshot
+
+\fBUsage\fP: container rollback [rollback-OPTIONS]
+.TP
+
+\fBAliases\fP: rb
+
+.SS roll back container to specified snapshot
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-epc\fR\fP
+epoch to use for snapshot
+.TP
+\fB\fB\-s\fR, \fB\-\-snap\fR\fP
+snapshot name
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container set-attribute
+set container user-defined attribute
+
+\fBUsage\fP: container set-attribute [set-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: set-attr
+
+.SS set container user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-a\fR, \fB\-\-attr\fR\fP
+attribute name
+.TP
+\fB\fB\-v\fR, \fB\-\-value\fR\fP
+attribute value
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container set-owner
+change ownership for a container
+
+\fBUsage\fP: container set-owner [set-owner-OPTIONS]
+.TP
+.SS change ownership for a container
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-u\fR, \fB\-\-user\fR\fP
+user who will own the container
+.TP
+\fB\fB\-g\fR, \fB\-\-group\fR\fP
+group who will own the container
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container set-property
+set container user-defined attribute
+
+\fBUsage\fP: container set-property [set-property-OPTIONS]
+.TP
+
+\fBAliases\fP: set-prop
+
+.SS set container user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-\-properties\fR (\fIrequired\fR)\fP
+container properties to set
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container stat
+get container statistics
+
+\fBUsage\fP: container stat [stat-OPTIONS]
+.TP
+.SS get container statistics
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS container update-acl
+update a container's ACL
+
+\fBUsage\fP: container update-acl [update-acl-OPTIONS]
+.TP
+.SS update a container's ACL
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-e\fR, \fB\-\-entry\fR\fP
+.TP
+\fB\fB\-f\fR, \fB\-\-acl-file\fR\fP
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem
+POSIX filesystem operations
+
+\fBAliases\fP: fs
+
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem copy
+copy to and from a POSIX filesystem
+
+\fBUsage\fP: filesystem copy [copy-OPTIONS]
+.TP
+.SS copy to and from a POSIX filesystem
+.TP
+\fB\fB\-s\fR, \fB\-\-src\fR (\fIrequired\fR)\fP
+copy source
+.TP
+\fB\fB\-d\fR, \fB\-\-dst\fR (\fIrequired\fR)\fP
+copy destination
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem get-attr
+get fs attributes
+
+\fBUsage\fP: filesystem get-attr [get-attr-OPTIONS]
+.TP
+.SS get fs attributes
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem reset-attr
+reset fs attributes
+
+\fBUsage\fP: filesystem reset-attr [reset-attr-OPTIONS]
+.TP
+.SS reset fs attributes
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem reset-chunk-size
+reset fs chunk size
+
+\fBUsage\fP: filesystem reset-chunk-size [reset-chunk-size-OPTIONS]
+.TP
+.SS reset fs chunk size
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem reset-oclass
+reset fs obj class
+
+\fBUsage\fP: filesystem reset-oclass [reset-oclass-OPTIONS]
+.TP
+.SS reset fs obj class
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS filesystem set-attr
+set fs attributes
+
+\fBUsage\fP: filesystem set-attr [set-attr-OPTIONS]
+.TP
+.SS set fs attributes
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-z\fR, \fB\-\-chunk-size\fR\fP
+container chunk size
+.TP
+\fB\fB\-o\fR, \fB\-\-oclass\fR\fP
+default object class
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS object
+DAOS object operations
+
+\fBAliases\fP: obj
+
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS object query
+query an object's layout
+
+\fBUsage\fP: object query [query-OPTIONS]
+.TP
+.SS query an object's layout
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-d\fR, \fB\-\-path\fR\fP
+unified namespace path
+.TP
+\fB\fB\-c\fR, \fB\-\-cont\fR\fP
+container UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-i\fR, \fB\-\-oid\fR\fP
+DAOS object id (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool
+perform tasks related to DAOS pools
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool autotest
+verify setup with smoke tests
+
+\fBUsage\fP: pool autotest [autotest-OPTIONS]
+.TP
+.SS verify setup with smoke tests
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool delete-attribute
+delete pool user-defined attribute
+
+\fBUsage\fP: pool delete-attribute [delete-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: del-attr
+
+.SS delete pool user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool get-attribute
+get pool user-defined attribute
+
+\fBUsage\fP: pool get-attribute [get-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: get-attr
+
+.SS get pool user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool list-attributes
+list pool user-defined attributes
+
+\fBUsage\fP: pool list-attributes [list-attributes-OPTIONS]
+.TP
+
+\fBAliases\fP: list-attrs
+
+.SS list pool user-defined attributes
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.TP
+\fB\fB\-V\fR, \fB\-\-verbose\fR\fP
+Include values
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool list-containers
+list all containers in pool
+
+\fBUsage\fP: pool list-containers [list-containers-OPTIONS]
+.TP
+
+\fBAliases\fP: list-cont, ls
+
+.SS list all containers in pool
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool query
+query pool info
+
+\fBUsage\fP: pool query [query-OPTIONS]
+.TP
+.SS query pool info
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS pool set-attribute
+set pool user-defined attribute
+
+\fBUsage\fP: pool set-attribute [set-attribute-OPTIONS]
+.TP
+
+\fBAliases\fP: set-attr
+
+.SS set pool user-defined attribute
+.TP
+\fB\fB\-G\fR, \fB\-\-sys-name\fR\fP
+DAOS system name
+.TP
+\fB\fB\-p\fR, \fB\-\-pool\fR\fP
+pool UUID (deprecated; use positional arg)
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
+.SS version
+print daos version
+.SS Help Options
+.TP
+\fB\fB\-h\fR, \fB\-\-help\fR\fP
+Show this help message
