DAOS-6222 dfs: add container create flags for POSIX consistency
- Add relaxed & balanced flags for dfs_cont_create.
- default of those modes will be relaxed in DAOS 2.0
- update the daos tool to be able to set those flags on cont create
- add options to dfs_mount flags to set the mount flags
  - in this case, a container created with balanced can only be
    accessed with balanced mode.
  - a container created with relaxed mode can be accessed with
    either mode.
- add some unit tests to verify behavior.

Signed-off-by: Mohamad Chaarawi <mohamad.chaarawi@intel.com>

--- a/doc/man/man8/daos.8
+++ b/doc/man/man8/daos.8
@@ -136,6 +136,8 @@ The \fBRESOURCE\fRs, respective \fBCOMMAND\fRs and \fBOPTION\fRs supported by \f
 .br
 	  \fB--type=\fRCTYPESTR    container type (HDF5, POSIX)
 .br
+	  \fB--mode=\fRCTYPESTR    DFS consistency mode (relaxed or balanced)
+.br
 	  \fB--oclass=\fROCLSSTR   container object class
 .br
 				      (ex: S{1,2,4,X}, RP_2G{1,2,4,X}, RP_3G{1,2,4,X}, RP_4G{1,2,4,X}, RP_XSF)
