--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.102-3) unstable; urgency=medium
+  [ Dmitry Eremin ]
+  * Replace memory allocator for engine with tbbmalloc
+
+ -- Dmitry Eremin <dmitry.eremin@intel.com>  Thu, 12 Jun 2021 23:22:47 +0300
+
 daos (1.3.102-1) unstable; urgency=medium
   [ Johann Lombardi]
   * Version bump to 1.3.102 for 2.0 test build 2
