--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.102-1) unstable; urgency=medium
+  [ Johann Lombardi]
+  * Version bump to 1.3.102 for 2.0 test build 2
+
+ -- Johann Lombardi <johann.lombardi@intel.com>  Fri, 11 Jun 2021 010:00:00 -0100
+
 daos (1.3.101-3) unstable; urgency=medium
   [ Johann Lombardi]
   * Bump version to match the RPM's one
