DAOS-6222 dfs: add container create flags for POSIX consistency (#5913)
- Add relaxed & balanced flags for dfs_cont_create.
- default of those modes will be relaxed in DAOS 2.0
- update the daos tool to be able to set those flags on cont create
- add options to dfs_mount flags to set the mount flags
  - in this case, a container created with balanced can only be
    accessed with balanced mode.
  - a container created with relaxed mode can be accessed with
    either mode.
- add some unit tests to verify behavior.

Signed-off-by: Mohamad Chaarawi <mohamad.chaarawi@intel.com>

--- a/doc/man/man8/daos.8
+++ b/doc/man/man8/daos.8
@@ -93,6 +93,9 @@ container UUID (optional)
 \fB\fB\-t\fR, \fB\-\-type\fR <default: \fI"POSIX"\fR>\fP
 container type
 .TP
+\fB\fB\-t\fR, \fB\-\-mode\fR\fP
+DFS consistency mode (relaxed or balanced)
+.TP
 \fB\fB\-d\fR, \fB\-\-path\fR\fP
 container namespace path
 .TP
