--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.102-2) unstable; urgency=medium
+  [ Alexander Oganezov ]
+  * Update to mercury v2.0.1
+
+ -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 16 Jun 2021 15:31:50 -0400
+
 daos (1.3.102-1) unstable; urgency=medium
   [ Johann Lombardi]
   * Version bump to 1.3.102 for 2.0 test build 2
