--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.102-4) unstable; urgency=medium
+  [ Maureen Jean ]
+  * Use rpm macro for path to python site packages
+
+ -- Maureen Jean <maureen.jean@intel.com>  Mon, 28 Jun 2021 19:15:00 -0400
+
 daos (1.3.102-3) unstable; urgency=medium
   [ Li Wei ]
   * Update raft to pick Pre-Vote
