--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.103-1) unstable; urgency=medium
+  [ Johann Lombardi ]
+  * Version bump to 1.3.103 for 2.0 test build 3
+
+ -- Johann Lombardi <johann.lombardi@intel.com>  Mon, 12 Jul 2021 010:00:00 -0100
+
 daos (1.3.102-3) unstable; urgency=medium
   [ Li Wei ]
   * Update raft to pick Pre-Vote
