--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
+daos (1.3.103-4) unstable; urgency=medium
+  [ Li Wei ]
+  * Update raft to fix slow leader re-elections
+
+ -- Li Wei <wei.g.li@intel.com>  Wed, 14 Jul 2021 14:22:00 +0800
+
 daos (1.3.103-3) unstable; urgency=medium
   [ Maureen Jean ]
   * Add python modules to python3.8 site-packages
 
  -- Maureen Jean <maureen.jean@intel.com>  Tue, 13 Jul 2021 14:50:00 -0400
 
+daos (1.3.103-2) unstable; urgency=medium
   [ Alexander Oganezov ]
   * Update to mercury v2.0.1
 
