--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,9 @@
-daos (1.3.103-2) unstable; urgency=medium
+daos (1.3.103-3) unstable; urgency=medium
+  [ Maureen Jean ]
+  * Add python modules to python3.8 site-packages
+
+ -- Maureen Jean <maureen.jean@intel.com>  Tue, 13 Jul 2021 14:50:00 -0400
+
   [ Alexander Oganezov ]
   * Update to mercury v2.0.1
 
