--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.104-2) unstable; urgency=medium
+  [ Niu Yawei ]
+  * Add vos_perf
+
+ -- Niu Yawei <yawei.niu@intel.com>  Wed, 04 Aug 2021 14:22:00 +0800
+
 daos (1.3.104-1) unstable; urgency=medium
   [ Jeff Olivier ]
   * Version bump to 1.3.104 for 2.0 test build 4
