--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.103-5) unstable; urgency=medium
+  [ Niu Yawei ]
+  * Add vos_perf
+
+ -- Niu Yawei <yawei.niu@intel.com>  Wed, 28 Jul 2021 14:22:00 +0800
+ k
 daos (1.3.103-4) unstable; urgency=medium
   [ Li Wei ]
   * Update raft to fix slow leader re-elections
