--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.104-2) unstable; urgency=medium
+  [ Alexander Oganezov ]
+  * Update OFI to v1.13.0 + 7d6d2a13411f8b5e793939493ed6e9f8b1c6a887
+
+ -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Tue, 03 Aug 2021 09:33:00 -0500
+
 daos (1.3.104-1) unstable; urgency=medium
   [ Jeff Olivier ]
   * Version bump to 1.3.104 for 2.0 test build 4
