--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daos (1.3.103-5) unstable; urgency=medium
+  [ Kris Jacque ]
+  * Move daos_metrics to server package
+
+ -- Kris Jacque <kristin.jacque@intel.com>  Tue, 03 Aug 2021 17:45:35 -0600
+
 daos (1.3.103-4) unstable; urgency=medium
   [ Li Wei ]
   * Update raft to fix slow leader re-elections
